--- a/RuleBased/RuleBasedModel.ipynb
+++ b/RuleBased/RuleBasedModel.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Álvaro Sáenz-Torre (1672425), Alejandra Reinares (1665499), Luis Domene (1673659) and Joan Bayona (1667446)"
+    "Álvaro Sáenz-Torre, Alejandra Reinares, Luis Domene and Joan Bayona"
    ]
   },
   {
